# CheckMed

./: main.py  pyproject.toml
api/: register.py  report.py  verify.py
config/: report_html.py  system_prompts.py
db/: database.py  models.py
